<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="content"
            type="com.arthurtang.androidapppractice_winwin.data.ContentData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:text="@{content.title}"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="我好像為什麼事情很悲哀，我想起生命" />

        <ImageView
            android:id="@+id/img_author"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            imageUrl="@{content.user.imageUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{content.user.nickName}"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_author"
            app:layout_constraintStart_toEndOf="@+id/img_author"
            app:layout_constraintTop_toTopOf="@+id/img_author"
            tools:text="張杰攻"/>

        <TextView
            android:id="@+id/tv_creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{content.creationDate}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_author_name"
            app:layout_constraintStart_toEndOf="@+id/tv_author_name"
            app:layout_constraintTop_toTopOf="@+id/tv_author_name"
            tools:text="2021.09.12"/>

        <ImageView
            android:id="@+id/img_content_1_image"
            android:layout_width="96dp"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            imageUrl="@{content.imageUrls[0]}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{content.content}"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:lines="2"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="@+id/img_content_1_image"
            app:layout_constraintEnd_toStartOf="@+id/img_content_1_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_author"
            tools:text="有甚麼人能用綠竹做弓矢，射入天空，永不落下?我之想像，猶如長箭，向雲空射去，去即不返。長箭所注，在碧藍而明靜之廣大虛空"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content_1_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content">

            <TextView
                android:id="@+id/tv_content_1_tag_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{content.tags[0]}"
                android:textSize="11sp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:background="@color/back_ground_color_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="美文" />

            <TextView
                android:id="@+id/tv_content_1_tag_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@{content.tags[1]}"
                android:textSize="11sp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:background="@color/back_ground_color_main"
                app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_tag_1"
                app:layout_constraintStart_toEndOf="@+id/tv_content_1_tag_1"
                app:layout_constraintTop_toTopOf="@+id/tv_content_1_tag_1"
                tools:text="故事" />

            <TextView
                android:id="@+id/tv_content_1_tag_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@{content.tags[2]}"
                android:textSize="11sp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:background="@color/back_ground_color_main"
                app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_tag_2"
                app:layout_constraintStart_toEndOf="@+id/tv_content_1_tag_2"
                app:layout_constraintTop_toTopOf="@+id/tv_content_1_tag_2"
                tools:text="精選優質" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_content_1_like_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/likes"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cl_content_1_tabs"
            app:layout_constraintStart_toEndOf="@+id/cl_content_1_tabs"
            app:layout_constraintTop_toTopOf="@+id/cl_content_1_tabs" />

        <TextView
            android:id="@+id/tv_content_1_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{content.likeCount.toString()}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_like_title"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_like_title"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_like_title"
            tools:text="123"/>

        <TextView
            android:id="@+id/tv_content_1_separator_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_like"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_like"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_like" />

        <TextView
            android:id="@+id/tv_content_1_favorite_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_separator_1"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_separator_1"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_separator_1" />

        <TextView
            android:id="@+id/tv_content_1_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{content.favoriteCount.toString()}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_favorite_title"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_favorite_title"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_favorite_title"
            tools:text="45" />

        <TextView
            android:id="@+id/tv_content_1_separator_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_favorite"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_favorite"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_favorite" />

        <TextView
            android:id="@+id/tv_content_1_comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_separator_2"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_separator_2"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_separator_2" />

        <TextView
            android:id="@+id/tv_content_1_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{content.commentCount.toString()}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_comment_title"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_comment_title"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_comment_title"
            tools:text="67"/>

        <TextView
            android:id="@+id/tv_content_1_separator_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_comment"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_comment"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_comment" />

        <TextView
            android:id="@+id/tv_content_1_viewer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewers"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_separator_3"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_separator_3"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_separator_3" />

        <TextView
            android:id="@+id/tv_content_1_viewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{content.unlockCount.toString()}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_content_1_viewer_title"
            app:layout_constraintStart_toEndOf="@+id/tv_content_1_viewer_title"
            app:layout_constraintTop_toTopOf="@+id/tv_content_1_viewer_title"
            tools:text="567"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>